# OOPCurse

./: .clang-tidy  .gitignore  CMakeLists.txt  DB.hpp  Otchet.odt  Src.odt  build.sh
curse/: DB.hpp  curse.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: BallFS.glsl  BallVS.glsl  BoardFS.glsl  BoardVS.glsl  Entity.cpp  Entity.hpp  GLContext.cpp  GLContext.hpp  Shader.cpp  Shader.hpp  VS.glsl  main.cpp
